Update dependencies, introduce strict typing, and align project with PHP 8.4 standards.

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "~6.0",
+    "php": "^8.4",
     "ext-json": "*",
-    "php": ">=7.2"
+    "guzzlehttp/guzzle": "^7.0"
   },
   "support": {
     "email": "info@helpcrunch.com",
